--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -2,9 +2,22 @@
     "LanguageNotice.title": "Salut!",
     "LanguageNotice.text": "Nous expérimentons un soutien initial pour les langues nationales. Nous sommes dans une phase très préliminaire, mais nous espérons être en mesure de prendre en charge plus de langues, bientôt.",
 
+    "Lcars.copyright": "STAR TREK et les marques et logos associés sont des marques de commerce de CBS Studios Inc. Tous droits réservés.",
+    "Lcars.credits": "Crédits",
+
     "Home.selection": "Sélectionnez l'outil.",
     "Home.characterButton": "Personnages et vaisseaux spatiaux",
     "Home.talentsButton": "Vue d'ensemble des talents",
 
-    "Page.title.home": "Page d'accueil"
+    "Common.button.select": "Choisir",
+    "Common.button.selectAll": "Sélectionner tout",
+    "Common.button.selectNone": "Sélectionnez Aucun",
+
+    "Page.title.home": "Page d'accueil",
+    "Page.title.era": "Ère",
+    "Page.title.talentsOverview": "Vue d'ensemble des talents",
+    "Page.title.creditsPage": "Crédits",
+
+    "Page.breadcrumb.characterCreation": "Création de personnages"
+
 }
