--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -1,6 +1,7 @@
 {
     "LanguageNotice.title": "Hallo",
     "LanguageNotice.text": "Wir experimentieren mit einer anfänglichen Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, aber wir hoffen, bald weitere Sprachen unterstützen zu können.",
+    "LanguageNotice.useEnglish": "Englisch verwenden",
 
     "Lcars.copyright": "STAR TREK und zugehörige Marken und Logos sind Marken von CBS Studios Inc. Alle Rechte vorbehalten.",
     "Lcars.credits": "Kredite",
