--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -1,6 +1,7 @@
 {
     "LanguageNotice.title": "Salut!",
     "LanguageNotice.text": "Nous expérimentons un soutien initial pour les langues nationales. Nous sommes dans une phase très préliminaire, mais nous espérons être en mesure de prendre en charge plus de langues, bientôt.",
+    "LanguageNotice.useEnglish": "Utiliser l'anglais",
 
     "Lcars.copyright": "STAR TREK et les marques et logos associés sont des marques de commerce de CBS Studios Inc. Tous droits réservés.",
     "Lcars.credits": "Crédits",
