begin fleshing out a GM tracker tool; bring in react-router to handle navigation

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -56,6 +56,7 @@
     "Page.title.talentsOverview": "Talente im Überblick",
     "Page.title.creditsPage": "Kredite",
     "Page.title.viewSheet": "Blatt anzeigen",
+    "Page.title.gamemasterTrackerPage": "Verfolgung",
 
     "Page.breadcrumb.characterCreation": "Charaktererstellung"
 
