--- a/WebTools/src/i18n/locales/es/translations.json
+++ b/WebTools/src/i18n/locales/es/translations.json
@@ -56,6 +56,7 @@
     "Page.title.talentsOverview": "Descripción general de talentos",
     "Page.title.creditsPage": "Créditos",
     "Page.title.viewSheet": "Ver hoja",
+    "Page.title.gamemasterTrackerPage": "Seguimiento",
 
     "Page.breadcrumb.characterCreation": "Creación de personajes"
 
