--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -56,6 +56,7 @@
     "Page.title.talentsOverview": "Vue d'ensemble des talents",
     "Page.title.creditsPage": "Crédits",
     "Page.title.viewSheet": "Voir la feuille",
+    "Page.title.gamemasterTrackerPage": "Pistage",
 
     "Page.breadcrumb.characterCreation": "Création de personnages"
 
