--- a/WebTools/src/i18n/locales/es/translations.json
+++ b/WebTools/src/i18n/locales/es/translations.json
@@ -6,6 +6,10 @@
     "Lcars.copyright": "STAR TREK y las marcas y logotipos relacionados son marcas comerciales de CBS Studios Inc. Todos los derechos reservados.",
     "Lcars.credits": "Créditos",
 
+    "EraSelectionPage.sourceInstruction": "Seleccione las fuentes. Pregúntele a su GM cuáles están disponibles.",
+    "EraSelectionPage.sourceNote": "Algunas fuentes aún no se han aplicado; ¡Vuelve pronto!",
+    "EraSelectionPage.eraInstruction": "Selecciona en qué Era jugar. Pregúntale a tu GM qué Era elegir.",
+
     "Home.selection": "Seleccione la herramienta.",
     "Home.characterButton": "Personajes y naves espaciales",
     "Home.talentsButton": "Descripción general de talentos",
@@ -30,6 +34,7 @@
     "Common.button.exportPdf": "Exportar a PDF",
     "Common.button.ok": "De acuerdo",
     "Common.button.add": "Agregar",
+    "Common.button.cancel": "Cancelar",
 
     "Construct.other.assignment": "Asignación",
     "Construct.other.attributes": "Atributos",
