more updates to translations, version number and news

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -72,6 +72,11 @@
     "Page.title.talentsOverview": "Talente im Überblick",
     "Page.title.creditsPage": "Kredite",
     "Page.title.viewSheet": "Blatt anzeigen",
+    "Page.title.supportingCharacter": "Nebencharakter",
+    "Page.title.characterType": "Zeichentyp",
+    "Page.title.systemGeneration": "Sternsystem-Generation",
+    "Page.title.sectorDetails": "Branchendetails",
+    "Page.title.starSystemDetails": "Details zum Sternensystem",
     "Page.title.gamemasterTrackerPage": "Verfolgung",
 
     "Page.breadcrumb.characterCreation": "Charaktererstellung"
