--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -61,5 +61,10 @@ Page.title.era,Era,Ära,Era,Ère
 Page.title.talentsOverview,Talents Overview,Talente im Überblick,Descripción general de talentos,Vue d'ensemble des talents
 Page.title.creditsPage,Credits,Kredite,Créditos,Crédits
 Page.title.viewSheet,View Sheet,Blatt anzeigen,Ver hoja,Voir la feuille
+Page.title.supportingCharacter,Supporting Character,Nebencharakter,Personaje secundario,Personnage secondaire
+Page.title.characterType,Character Type,Zeichentyp,Tipo de carácter,Type de personnage
+Page.title.systemGeneration,System Generation,Sternsystem-Generation,Generación del Sistema Estelar,Génération du système stellaire
+Page.title.sectorDetails,Sector Details,Branchendetails,Detalles del sector,Détails du secteur
+Page.title.starSystemDetails,Star System Details,Details zum Sternensystem,Detalles del sistema Star,Détails du système stellaire
 Page.title.gamemasterTrackerPage,Tracking,Verfolgung,Seguimiento,Pistage
 Page.breadcrumb.characterCreation,Character Creation,Charaktererstellung,Creación de personajes,Création de personnages
